force-app/main/default/objects/Discount__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(AND(ISBLANK( Valid_From__c),ISBLANK( Valid_To__c)), TRUE,
IF(AND(ISBLANK( Valid_From__c),  NOW() &lt;= Valid_To__c ), TRUE,
IF(AND(ISBLANK( Valid_To__c),  NOW() &gt;= Valid_From__c ), TRUE,
IF(AND(NOW() &gt;= Valid_From__c,  NOW() &lt;= Valid_To__c ), TRUE,
FALSE))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>