force-app/main/default/objects/Discount__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Dollar amount of the discount.</description>
    <inlineHelpText>The dollar amount of the discount. Only select if the Method is Amount.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>