force-app/main/default/objects/Discount__c/fields/Applicable_Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Storage_Type__c</fullName>
    <description>When multi-biobanking discounts are sunsetted, this field may no longer be needed.</description>
    <inlineHelpText>For some system-applied discounts, the applicable storage type is relevant for picking the appropriate discount based on the number of services selected. Leave empty for other discount types.</inlineHelpText>
    <label>Applicable Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Storage_Types</valueSetName>
    </valueSet>
</CustomField>