force-app/main/default/objects/Discount__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The bundle that this discount is restricted to.</description>
    <label>Bundle</label>
    <referenceTo>Bundle__c</referenceTo>
    <relationshipLabel>Discounts</relationshipLabel>
    <relationshipName>Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>