force-app/main/default/objects/Discount__c/fields/Marketing_Code__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Code__c</fullName>
    <description>For marketing discounts that involve a code.</description>
    <inlineHelpText>If this discount is associated with a marketing code, enter it here.</inlineHelpText>
    <label>Marketing Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>