force-app/main/default/objects/Discount__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Is this a percentage discount or a fixed amount?</description>
    <inlineHelpText>Indicate if this is a flat-amount discount or a percentage. Only fill in the appropriate amount or percentage below.</inlineHelpText>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>