force-app/main/default/objects/Discount__c/fields/Minimum_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Amount__c</fullName>
    <description>The minimum amount that the order must be in order to apply this discount.  Relevant for &quot;Whole Order&quot; discounts only.</description>
    <label>Minimum Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>