force-app/main/default/objects/Discount__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>The percentage of this discount</description>
    <inlineHelpText>The percentage of this discount.  Only enter if Method is Percentage.</inlineHelpText>
    <label>Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>