force-app/main/default/objects/Discount__c/fields/Services_Count__c.field-meta.xml
<CustomField>
    <fullName>Services_Count__c</fullName>
    <description>When multi-biobanking discounts are sunsetted, this field may no longer be needed.</description>
    <inlineHelpText>For some system-applied discounts, the number of services is relevant for picking the appropriate discount based on the number of services selected.  Leave empty for other discount types</inlineHelpText>
    <label>Services Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>