force-app/main/default/objects/Discount__c/fields/System_Applied__c.field-meta.xml
<CustomField>
    <fullName>System_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Likely Temporary - Used for adding multi-biobanking services discounts that do not show up as findable in the builder.  Added via automation.  Once new pricing scheme is adopted, this field can be deprecated.</description>
    <inlineHelpText>Used for adding multi-biobanking services discounts that do not show up as findable in the builder</inlineHelpText>
    <label>System Applied</label>
    <type>Checkbox</type>
</CustomField>