force-app/main/default/objects/Discount__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bundle Specific</fullName>
            </value>
            <value>
                <fullName>Product Specific</fullName>
            </value>
            <value>
                <fullName>Whole Order</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Multi-Annual Storage</fullName>
            </value>
            <value>
                <fullName>Multi-Biobanking Pkg</fullName>
            </value>
            <value>
                <fullName>Ad-Hoc Sales</fullName>
                <isActive>false</isActive>
                <label>Ad-Hoc Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>