force-app/main/default/objects/Discount__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <description>Discount valid from date/time</description>
    <label>Valid From</label>
    <type>DateTime</type>
</CustomField>