force-app/main/default/objects/Discount__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <description>Valid until date/time</description>
    <label>Valid To</label>
    <type>DateTime</type>
</CustomField>