force-app/main/default/objects/Discount__c/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Bundle__c</columns>
    <columns>Product__c</columns>
    <columns>Amount__c</columns>
    <columns>Percentage__c</columns>
    <columns>Marketing_Code__c</columns>
    <columns>Services_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
</ListView>